# mpc_vision

./: CMakeLists.txt  package.xml  readme.md
data/test_data_may5/: test_may5_pos1.bag  test_may5_pos2.bag  test_may5_pos3.bag  test_may5_pos4.bag  test_may5_pos5.bag  test_may5_pos6.bag  test_may5_pos7.bag
data/traj_data_june22/: 2021-06-22-12-23-21_calibration.bag  2021-06-22-13-04-38_test1.bag
data/traj_data_june23/: n13_calibration_input.bag  n13_traj8_1_input.bag
data/traj_data_june23_Fabio/: 2021-06-23-13-58-50_calibration.bag  2021-06-23-14-00-23_range30_rep1.bag  2021-06-23-14-01-07_range60_rep1.bag
data/traj_data_june30/: n10_fullexp1_fail.bag
data/traj_data_june30_Fabio/: n8_calibration_fabio.bag  n8_range30_rep1.bag  n8_range30_rep2.bag  n8_range30_rep3.bag  n8_range30_rep4.bag
include/: general_functions.h
launch/: calibrate_and_updatesom.launch  calibration.launch  update_som_only.launch
msg/: ClothMesh.msg  SOMstate.msg
src/: calibration.cpp  general_functions.cpp  kill_calibration.sh  update_som.cpp
