<?xml version="1.0"?>
<package  format="2">
  <name>mpc_vision</name>
  <version>0.0.1</version>
  <description>
    Model Predictive Control for a cloth manipulation application - Vision codes
  </description>
  <maintainer email="aluque@iri.upc.edu">
    Adria Luque
  </maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
</package>

